--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=FutbolFemeni
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:kvLsUTDe7z0NvjyuUWeVLu34wjGuRIPia+Tnsqg73CY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
 
