Afegir rols y managers

--- a/.env
+++ b/.env
@@ -3,6 +3,8 @@ APP_ENV=local
 APP_KEY=base64:kvLsUTDe7z0NvjyuUWeVLu34wjGuRIPia+Tnsqg73CY=
 APP_DEBUG=true
 APP_URL=http://localhost:8000
+APP_LOCALE=ca
+APP_FALLBACK_LOCALE=en
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
