--- a/.env
+++ b/.env
@@ -16,11 +16,11 @@ DB_DATABASE=futbol
 DB_USERNAME=futbol
 DB_PASSWORD=futbol
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=reverb
 BROADCAST_CONNECTION=reverb
-CACHE_DRIVER=redis
+CACHE_STORE=redis
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -31,8 +31,6 @@ REDIS_PORT=6379
 GOOGLE_CLIENT_ID=your-client-id
 GOOGLE_CLIENT_SECRET=your-client-secret
 GOOGLE_REDIRECT=http://localhost/auth/google/callback
-
-BROADCAST_DRIVER=reverb
 
 REVERB_APP_ID=local
 REVERB_APP_KEY=local
