--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+
+
 APP_NAME=FutbolFemeni
 APP_ENV=local
 APP_KEY=base64:kvLsUTDe7z0NvjyuUWeVLu34wjGuRIPia+Tnsqg73CY=
@@ -43,3 +45,8 @@ VITE_REVERB_APP_KEY=local
 VITE_REVERB_HOST=localhost
 VITE_REVERB_PORT=8081
 VITE_REVERB_SCHEME=http
+
+LLM_BASE_URL=http://ollama:11434
+LLM_MODEL=tinyllama:1.1b
+
+
